--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>GifTastic</title>
+
+    <!-- Link css -->
+    <link rel="stylesheet" href="/GifTastic/assets/css/style.css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
 
+    <div class="container">
+        <div class="jumbotron title pt-0 pb-0">
+            <h1 class="text-center font-weight-bold font-size">GifTastic!</h1>
+        </div>
+
+
+        <!-- Javacript link -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script type="text/javascript" src="/GifTastic/assets/javascript/app.js"></script>
+    </div>
 </body>
 
 </html>
