button to add new player added, form to input new player added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
             <h1 class="text-center font-weight-bold font-size">GifTastic!</h1>
         </div>
 
+        <!-- Div to display the buttons -->
+        <div id="buttons-view"></div>
+
+        <!-- Form to input a new player -->
+        <form id="players-form">
+            <label for="players-view">Add an animal</label>
+            <br>
+            <input type="text" id="player-input">
+            <br>
+            <!-- Button to add a new player -->
+            <input id="add-player" type="submit" value="Submit">
+        </form>
+
+        <!-- Div to display the gifs -->
+        <div id="players-view"></div>
 
         <!-- Javacript link -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
