--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>GifTastic</title>
 
     <!-- Link css -->
-    <link rel="stylesheet" href="/GifTastic/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -41,7 +41,7 @@
 
         <!-- Javacript link -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type="text/javascript" src="/GifTastic/assets/javascript/app.js"></script>
+        <script type="text/javascript" src="assets/javascript/app.js"></script>
     </div>
 </body>
 
