style.css file updated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <!-- Form to input a new player -->
         <form id="players-form">
-            <label for="players-view">Add an animal</label>
+            <label for="players-view">Add a player</label>
             <br>
             <input type="text" id="player-input">
             <br>
